assets/__endrock_testimonialCarousel.css
  .no-scroll {
      overflow: hidden !important;
  }

  .no-scroll > * {
      overflow: hidden !important;
  }

  .testimonial-carousel {
      display: flex;
      flex-direction: column;
      flex-wrap: wrap;
      justify-content: center;
      align-items: center;
      position: relative;
  }

  .content-testimonial-carousel-navigation {
      position: relative;
      display: flex;
      justify-content: center;
      align-items: center;
      column-gap: 12px;
  }

  .content-testimonial-carousel {
      display: flex;
      flex-direction: column;
      row-gap: 24px;
  }

  .content-testimonial-carousel .testimonial-carousel {
      max-width: 484px;
  }

  .content-testimonial-carousel .swiper-button-next,
  .content-testimonial-carousel .swiper-button-prev {
      position: relative;
      right: 0px;
      left: 0px;
      top: 0px;
      max-height: 32px;
      margin: 0px;
  }

  .content-testimonial-carousel .swiper-button-next::after,
  .content-testimonial-carousel .swiper-button-prev::after {
      content: "";
  }

  .content-testimonial-carousel .swiper-pagination {
      position: relative;
      display: flex;
      justify-content: center;
      gap: 8px;
      flex-wrap: wrap;
      max-width: fit-content;
      top: 0px;
      bottom: 0px;
  }

  .content-testimonial-carousel .swiper-pagination-bullet-active {
      background-color: #000000 !important;
  }

  .content-testimonial-carousel .swiper-pagination .swiper-pagination-bullet {
      width: 8px;
      height: 8px;
      background-color: #ABABAB;
  }


  #testimonial-carousel-desktop {
      width: 100%;
      display: flex;
      justify-content: center;
      flex-direction: column;
      margin-top: 55px;
  }

  .content-testimonial-carousel {
      width: 100%;
  }

  .testimonial-carousel .swiper-wrapper {
      margin: 0;
      height: auto;
  }

  .testimonial-item .testimonial-video {
      display: flex;
      justify-content: center;
      align-items: center;
      height: 100%;
      max-height: 112px;
      padding: 6px;
      border: 1px solid #92BAEC;
      border-radius: 100%;
      -webkit-border-radius: 100%;
      -moz-border-radius: 100%;
      -ms-border-radius: 100%;
      -o-border-radius: 100%;
  }

  .testimonial-item .testimonial-video video {
      width: 100%;
      height: 100%;
      object-fit: cover;
      cursor: pointer;
      border-radius: 100%;
      -webkit-border-radius: 100%;
      -moz-border-radius: 100%;
      -ms-border-radius: 100%;
      -o-border-radius: 100%;
  }

  .testimonial-item .play-video-overlay {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      display: flex;
      justify-content: center;
      align-items: center;
      padding: 6px;
      border-radius: 100%;
      -webkit-border-radius: 100%;
      -moz-border-radius: 100%;
      -ms-border-radius: 100%;
      -o-border-radius: 100%;
  }

  .testimonial-item .play-video-overlay .action-video {

      width: 100%;
      height: 100%;
      display: flex;
      justify-content: center;
      align-items: center;
      cursor: pointer;
      z-index: 1;
  }


  .testimonial-carousel .content-heading {
      width: 100%;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      row-gap: 20px;
      padding: 0 20px;
      margin: 0px;
  }

  .testimonial-carousel h2 {
      font-size: 30px;
      line-height: 1.2em;
      letter-spacing: 0px;
      color: #000;
      text-transform: none;
      font-weight: 700;
      text-align: center;
  }

  .action-video svg {
      transition: all 0.3s ease-in-out;
  }

  .action-video svg:hover {
      width: 50px;
      height: 50px;
      transition: all 0.3s ease-in-out;
  }

  .container-blur-modal {
      position: fixed;
      inset: 0;
      width: 100vw;
      -webkit-backdrop-filter: blur(10px);
      backdrop-filter: blur(10px);
      z-index: 100;
      display: flex;
      justify-content: center;
      align-items: center;
      padding: 30px;
      overflow: hidden;
  }

  .modal-video-iframe {
      width: auto;
      height: auto;
      display: flex;
      justify-content: center;
      align-items: center;
      position: relative;
      border-radius: 16px;
      padding: 50px;
  }

  .modal-video-iframe #close-modal-video {
      position: absolute;
      top: 60px;
      right: 60px;
      cursor: pointer;
      fill: transparent !important;
      stroke-width: 2px !important;
      transition: all 0.3s ease-in-out;
      visibility: hidden;
      z-index: 100;
      border-radius: 50%;
      -webkit-border-radius: 50%;
      -moz-border-radius: 50%;
      -ms-border-radius: 50%;
      -o-border-radius: 50%;
  }

  .modal-video-iframe #close-modal-video:hover {
      fill: #f74948 !important;
      transition: all 0.3s ease-in-out;
  }

  .modal-video-iframe video {
      width: 364px;
      height: 650px;
      max-width: 650px;
      max-height: 650px;
      object-fit: contain;
      border-radius: 16px;
  }

  .modal-video-iframe video::-webkit-media-controls-fullscreen-button {
      display: none;
  }

  @keyframes showModal {
      0% {
          opacity: 0;
      }

      100% {
          opacity: 1;
      }
  }

  @keyframes hideModal {
      0% {
          opacity: 1;
      }

      100% {
          opacity: 0;
      }
  }

  @keyframes showVideo {
      0% {
          opacity: 0;
          transform: scale(0.5);
      }

      100% {
          opacity: 1;
          transform: scale(1);
      }
  }

  @keyframes hideVideo {
      0% {
          opacity: 1;
          transform: scale(1);
      }

      100% {
          opacity: 0;
          transform: scale(0.5);
          -webkit-transform: scale(0.5);
          -moz-transform: scale(0.5);
          -ms-transform: scale(0.5);
          -o-transform: scale(0.5);
      }
  }

  @media screen and (min-width: 993px) {
      #testimonial-carousel-mobile {
          display: none;
      }

      #testimonial-carousel-desktop:not(.is-moved) {
          display: none;
      }
  }

  @media screen and (max-width: 992px) {
      #testimonial-section-root {
          width: 100%;
      }

      #testimonial-carousel-desktop {
          display: none;
      }


      #testimonial-carousel-mobile {
          padding: 0 16px;
          display: block;
          border-radius: 100%;
          -webkit-border-radius: 100%;
          -moz-border-radius: 100%;
          -ms-border-radius: 100%;
          -o-border-radius: 100%;
      }

      .content-testimonial-carousel .testimonial-carousel {
          max-width: unset;
          width: 100%;
      }

      .mobile-scroll-container {
          padding: 16px 0px;
          overflow-x: auto;
          -webkit-overflow-scrolling: touch;
          white-space: nowrap;
          display: flex;
          border-radius: 100px;
          -webkit-border-radius: 100px;
          -moz-border-radius: 100px;
          -ms-border-radius: 100px;
          -o-border-radius: 100px;

          scrollbar-width: none;
          -ms-overflow-style: none;

      }


      .testimonial-item .play-video-overlay,
      .testimonial-item .testimonial-video {
          padding: 2px;
      }

      .testimonial-item .testimonial-video {
          border: 2px solid #92BAEC;
      }


      .modal-video-iframe #close-modal-video {
          top: 0px;
          right: 0px;
          position: relative;
      }


      .modal-video-iframe {
          width: 100%;
          max-width: 370px;
          box-sizing: border-box;
          padding: 0px;
          display: flex;
          flex-direction: column;
          align-items: flex-end;
          justify-content: flex-start;
          row-gap: 6px;
      }

      .modal-video-iframe video {
          max-height: 100%;
          max-width: 100%;
          aspect-ratio: 9 / 16;
          object-fit: contain;
      }

      .mobile-list {
          display: flex;
          height: auto;
          list-style: none;
          padding: 0;
          margin: 0;
          width: 100%;
      }

      .mobile-list .testimonial-item {
          position: relative;
          flex-shrink: 0;
          max-width: 88px;
          max-height: 88px;
          margin-right: 12px;
      }

      .content-testimonial-carousel-navigation {
          display: none;
      }
  }


  @media screen and (max-width: 450px) {
      .modal-video-iframe {
          width: auto;
          max-width: 370px;

      }

      .modal-video-iframe video {
          width: auto;
          height: auto;
      }

  }

